--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kamo-hackathon-sdk",
+  "name": "kamo-ts-sdk",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -16,5 +16,8 @@
   "dependencies": {
     "@mysten/sui": "^1.21.2",
     "sui": "link:@@mysten/sui"
-  }
+  },
+  "files": [
+    "dist"
+  ]
 }
