--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@mysten/sui": "^1.21.2",
+    "bignumber.js": "^9.1.2",
     "dotenv": "^16.4.7",
     "sui": "link:@@mysten/sui"
   },
