--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "kamo-ts-sdk",
-  "version": "1.0.0",
+  "name": "@kamo-finance/ts-sdk",
+  "version": "1.0.4",
   "main": "index.js",
   "scripts": {
     "test": "vitest",
@@ -9,7 +9,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
+  "description": "A TypeScript SDK for interacting with Kamo Finance APIs.",
   "devDependencies": {
     "@types/node": "^22.13.7",
     "vitest": "^3.0.8"
@@ -17,10 +17,18 @@
   "dependencies": {
     "@mysten/sui": "^1.21.2",
     "bignumber.js": "^9.1.2",
-    "dotenv": "^16.4.7",
-    "sui": "link:@@mysten/sui"
+    "dotenv": "^16.4.7"
   },
   "files": [
     "dist"
-  ]
+  ],
+  "exports": {
+    ".": "./dist/index.js",
+    "./client": "./dist/client/index.js",
+    "./transaction": "./dist/transaction/index.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kamo-finance/ts-sdk.git"
+  }
 }
