--- a/package.json
+++ b/package.json
@@ -1,23 +1,34 @@
 {
-  "name": "kamo-ts-sdk",
-  "version": "1.0.0",
+  "name": "@kamo-finance/ts-sdk",
+  "version": "1.0.4",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "vitest",
     "build": "tsc"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
+  "description": "A TypeScript SDK for interacting with Kamo Finance APIs.",
   "devDependencies": {
-    "@types/node": "^22.13.7"
+    "@types/node": "^22.13.7",
+    "vitest": "^3.0.8"
   },
   "dependencies": {
     "@mysten/sui": "^1.21.2",
-    "sui": "link:@@mysten/sui"
+    "bignumber.js": "^9.1.2",
+    "dotenv": "^16.4.7"
   },
   "files": [
     "dist"
-  ]
+  ],
+  "exports": {
+    ".": "./dist/index.js",
+    "./client": "./dist/client/index.js",
+    "./transaction": "./dist/transaction/index.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kamo-finance/ts-sdk.git"
+  }
 }
